--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.login=dd2ab263abaf70493170e6f3893ed434621ee4b1 //用户token
 # sonar.login=username //用户名
 # sonar.password=password //密码
 # Optional
-sonar.host.url=http://106.14.36.58:9000 //服务器url
+sonar.host.url=http://106.14.36.58:9000
 sonar.language=java //代码语言
