--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-﻿sonar.projectKey=group01 //项目唯一标识符
-sonar.projectName=Demo //项目名称
-sonar.projectVersion=1.0-SNAPSHOT //项目版本号
-sonar.sources=src         //项目源码目录
-sonar.login=dd2ab263abaf70493170e6f3893ed434621ee4b1 //用户token
+﻿sonar.projectKey=group01
+sonar.projectName=Demo
+sonar.projectVersion=1.0-SNAPSHOT
+sonar.sources=src
+sonar.login=dd2ab263abaf70493170e6f3893ed434621ee4b1
 # or //建议使用token
 # sonar.login=username //用户名
 # sonar.password=password //密码
 # Optional
 sonar.host.url=http://106.14.36.58:9000
-sonar.language=java //代码语言
+sonar.language=java
