--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
-﻿sonar.projectKey=Unknown
+﻿sonar.projectKey=myprojectKey
 sonar.projectName=Demo
-sonar.projectVersion=1.0-SNAPSHOT
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.login=dd2ab263abaf70493170e6f3893ed434621ee4b1
 # or //建议使用token
