--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,4 @@
-﻿sonar.projectKey=myprojectKey
-sonar.projectName=Demo
+﻿sonar.projectName=Demo
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
