--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
-﻿sonar.projectName=Demo
+# meta data 
+sonar.projectKey=java-test-progress
+sonar.projectName=TestDemo
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
