--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # meta data 
 sonar.projectKey=java-test-progress
-sonar.projectName=TestDemo
+sonar.projectName=MavenDemo
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/main/resources/java
