--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=java-test-progress
 sonar.projectName=MavenDemo
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=src/main/resources/java
+sonar.sources=src/main/java
 sonar.login=dd2ab263abaf70493170e6f3893ed434621ee4b1
 # or //建议使用token
 # sonar.login=username //用户名
